# document_structuring

./: README.md  SKILL.md  pyproject.toml
references/: cli_spec.md
scripts/: database.py  document_tool.py  parse_document.py  test_parser.py
src/doc_structuring/: __init__.py  cli.py  config.py  database.py  parser.py  utils.py
src/doc_structuring/extractors/: __init__.py  base.py  docx.py  pdf.py
