[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc-structuring"
version = "0.1.0"
description = "RAG document parser: slice PDF/DOCX into structured, searchable chunks"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
readme = "README.md"
dependencies = [
    "PyMuPDF>=1.24.0",
    "pymupdf4llm>=0.0.10",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
doc-structuring = "doc_structuring.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/doc_structuring"]
